# ComfyCompactTools

./: .coverage  .gitignore  .ignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  ask.md  askmemo.md  config.json  dependency-graph.html  package.json  playwright.config.ts  requirements.txt  start-cockpit.bat  trask.md  tstskil.md  wan22manual.md  プロンプトテクニック  プロンプト集  仮メモ.md
.claude/: .gitignore  README.md  settings.local.json
.codex/: .gitignore  README.md  USAGE.md  config.toml
Aurora攻略/: グラボが来たらやりたいこと.md  スコアリングフォーマット作成.md  生成エンジンハック.md  蒸留プロセス.md
comfy flux2 prompt/: vrtask.md
comfy_flux2_api_pack/: .env.example  FOR_LOCAL_LLM.md  LOCAL_LLM_PROMPT.txt  comfy_flux2_generate.py  requirements.txt
docs/: 01_goals_and_non_goals.md  02_architecture.md  03_manifest_spec.md  04_test_plan.md  05_future_features_xyz_controlnet.md  agent-browser.md  comfy_workflow_rules.md  fixture_format.md  manifest.schema.json
plans/: 2026-01-29-gallery-manual-refresh.md  2026-01-29-images-generate-many-wait.md  2026-01-29-remove-queue-column.md  2026-01-29-ws-ui-load-reduction.md  _TEMPLATE.md  image_workflow_defaults.md  ltxplan.md  (+2 more)
画像ビューア/: .gitignore  README.md  build_windows.bat  pyproject.toml  requirements.txt  run.err
画像ビューア/ComfyUI_windows_portable/: comfy(portable)_install_manager.bat
画像ビューア/nimbleview/: app.py  constants.py  favorites.py  file_index.py  settings.py  thumbnails.py
画像ビューア/nimbleview/widgets/: clickable_label.py  grid_page.py  image_canvas.py  thumb_delegate.py  video_player.py  viewer_page.py
画像ビューア/test/: MP4-to-GIF.bat  MetaTFT.lnk
(+106 files in other folders)
