[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbleview"
version = "0.1.0"
description = "Dense, practical image/video viewer for Windows"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
]

[project.scripts]
nimbleview = "nimbleview.app:main"
